--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-*.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
-/target
+*~
+.classpath
+.project
+target
+.settings
+.DS_Store
+.faces-config.xml.jsfdia
+MANIFEST.MF
+.idea
+*.iml
