--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,12 @@
             <artifactId>hibernate-validator-annotation-processor</artifactId>
             <scope>provided</scope>
         </dependency>
-
+   		<dependency>
+      		<groupId>org.hibernate</groupId>
+      		<artifactId>hibernate-annotations</artifactId>
+      		<version>3.4.0.GA</version>
+    	</dependency>
+  
         <!-- Needed for running tests (you may also use TestNG) -->
         <dependency>
             <groupId>junit</groupId>
