--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>javax.servlet</groupId>
+        	<artifactId>jstl</artifactId>
+        	<version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
