--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,12 @@
         	<artifactId>jstl</artifactId>
         	<version>1.2</version>
         </dependency>
+        
+         <dependency>
+            <groupId>org.jboss.ejb3</groupId>
+            <artifactId>jboss-ejb3-ext-api</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
