--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,4 +40,29 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	
+	<security-constraint>
+		<display-name>users section</display-name>
+		<web-resource-collection>
+			<web-resource-name>users</web-resource-name>
+			<url-pattern>/users/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>ADMIN</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
+	<login-config>
+		<auth-method>BASIC</auth-method>
+		<realm-name>SportLeagueSystem</realm-name>	
+	</login-config>
+	<security-role>
+		<role-name>PLAYER</role-name>
+	</security-role>
+	<security-role>
+		<role-name>LEAGUE_SUPERVISOR</role-name>
+	</security-role>
+	<security-role>
+		<role-name>ADMIN</role-name>
+	</security-role>
 </web-app>
