--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,9 +53,14 @@
 	</security-constraint>
 	
 	<login-config>
-		<auth-method>BASIC</auth-method>
-		<realm-name>SportLeagueSystem</realm-name>	
+		<auth-method>FORM</auth-method>
+		<realm-name>SportLeagueSystem</realm-name>
+		<form-login-config>
+			<form-login-page>/login.xhtml</form-login-page>
+			<form-error-page>/login.xhtml</form-error-page>
+		</form-login-config>	
 	</login-config>
+	
 	<security-role>
 		<role-name>PLAYER</role-name>
 	</security-role>
