Added configuration for SignleSignOn - Does not work in AS7 though (or whatever..)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -109,4 +109,7 @@
 	<security-role>
 		<role-name>ADMIN</role-name>
 	</security-role>
+	
+	<!-- Enables HTTP Session Replication -->
+	<distributable/>
 </web-app>
